optimizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    cadena
    cambiolinea
    char
    comentario
    float64
    intpunto
    println
    tab

Grammar

Rule 0     S' -> INICIO
Rule 1     INICIO -> INSTRUCCIONES
Rule 2     INSTRUCCIONES -> INSTRUCCIONES INSTRUCCION
Rule 3     INSTRUCCIONES -> INSTRUCCION
Rule 4     INSTRUCCION -> INICIOSALTO
Rule 5     INSTRUCCION -> INICIOGOTO
Rule 6     INSTRUCCION -> CREARIF
Rule 7     INSTRUCCION -> ASIGNACION
Rule 8     INSTRUCCION -> IMPRESION
Rule 9     INSTRUCCION -> LLAMADAMETODO
Rule 10    INSTRUCCION -> METODO
Rule 11    INICIOSALTO -> salto dospuntos
Rule 12    INICIOGOTO -> goto salto puntocoma
Rule 13    CREARIF -> if parentesisa IZQ SIMBOLO IZQ parentesisc llavesa goto salto llavesc
Rule 14    ASIGNACION -> LADO igual LADO puntocoma
Rule 15    IMPRESION -> fmt punto printf parentesisa TIPOCHAR coma ICHAR parentesisc puntocoma
Rule 16    LLAMADAMETODO -> id parentesisa parentesisc puntocoma
Rule 17    METODO -> func id parentesisa parentesisc llavesa INSTRUCCIONES return puntocoma llavesc
Rule 18    METODO -> func main parentesisa parentesisc llavesa INSTRUCCIONES llavesc
Rule 19    ICHAR -> int parentesisa DER parentesisc
Rule 20    ICHAR -> IZQ
Rule 21    TIPOCHAR -> impc
Rule 22    TIPOCHAR -> impd
Rule 23    TIPOCHAR -> impf
Rule 24    LADO -> OPERACION
Rule 25    LADO -> GETSTACK
Rule 26    LADO -> GETHEAP
Rule 27    LADO -> DER
Rule 28    OPERACION -> DER OP DER
Rule 29    DER -> IZQ
Rule 30    DER -> h
Rule 31    DER -> p
Rule 32    GETSTACK -> stack corchetea int parentesisa DER parentesisc corchetec
Rule 33    GETHEAP -> heap corchetea int parentesisa DER parentesisc corchetec
Rule 34    IZQ -> int
Rule 35    IZQ -> temporal
Rule 36    IZQ -> flotante
Rule 37    IZQ -> NEG
Rule 38    SIMBOLO -> mayorque
Rule 39    SIMBOLO -> menorque
Rule 40    SIMBOLO -> mayoriwal
Rule 41    SIMBOLO -> menoriwal
Rule 42    SIMBOLO -> iwaliwal
Rule 43    SIMBOLO -> distintoque
Rule 44    SIMBOLO -> and
Rule 45    SIMBOLO -> or
Rule 46    OP -> mas
Rule 47    OP -> menos
Rule 48    OP -> asterisco
Rule 49    OP -> dividido
Rule 50    OP -> modulo
Rule 51    NEG -> menos int
Rule 52    NEG -> menos flotante

Terminals, with rules where they appear

and                  : 44
asterisco            : 48
cadena               : 
cambiolinea          : 
char                 : 
coma                 : 15
comentario           : 
corchetea            : 32 33
corchetec            : 32 33
distintoque          : 43
dividido             : 49
dospuntos            : 11
error                : 
float64              : 
flotante             : 36 52
fmt                  : 15
func                 : 17 18
goto                 : 12 13
h                    : 30
heap                 : 33
id                   : 16 17
if                   : 13
igual                : 14
impc                 : 21
impd                 : 22
impf                 : 23
int                  : 19 32 33 34 51
intpunto             : 
iwaliwal             : 42
llavesa              : 13 17 18
llavesc              : 13 17 18
main                 : 18
mas                  : 46
mayoriwal            : 40
mayorque             : 38
menoriwal            : 41
menorque             : 39
menos                : 47 51 52
modulo               : 50
or                   : 45
p                    : 31
parentesisa          : 13 15 16 17 18 19 32 33
parentesisc          : 13 15 16 17 18 19 32 33
printf               : 15
println              : 
punto                : 15
puntocoma            : 12 14 15 16 17
return               : 17
salto                : 11 12 13
stack                : 32
tab                  : 
temporal             : 35

Nonterminals, with rules where they appear

ASIGNACION           : 7
CREARIF              : 6
DER                  : 19 27 28 28 32 33
GETHEAP              : 26
GETSTACK             : 25
ICHAR                : 15
IMPRESION            : 8
INICIO               : 0
INICIOGOTO           : 5
INICIOSALTO          : 4
INSTRUCCION          : 2 3
INSTRUCCIONES        : 1 2 17 18
IZQ                  : 13 13 20 29
LADO                 : 14 14
LLAMADAMETODO        : 9
METODO               : 10
NEG                  : 37
OP                   : 28
OPERACION            : 24
SIMBOLO              : 13
TIPOCHAR             : 15

Parsing method: LALR

state 0

    (0) S' -> . INICIO
    (1) INICIO -> . INSTRUCCIONES
    (2) INSTRUCCIONES -> . INSTRUCCIONES INSTRUCCION
    (3) INSTRUCCIONES -> . INSTRUCCION
    (4) INSTRUCCION -> . INICIOSALTO
    (5) INSTRUCCION -> . INICIOGOTO
    (6) INSTRUCCION -> . CREARIF
    (7) INSTRUCCION -> . ASIGNACION
    (8) INSTRUCCION -> . IMPRESION
    (9) INSTRUCCION -> . LLAMADAMETODO
    (10) INSTRUCCION -> . METODO
    (11) INICIOSALTO -> . salto dospuntos
    (12) INICIOGOTO -> . goto salto puntocoma
    (13) CREARIF -> . if parentesisa IZQ SIMBOLO IZQ parentesisc llavesa goto salto llavesc
    (14) ASIGNACION -> . LADO igual LADO puntocoma
    (15) IMPRESION -> . fmt punto printf parentesisa TIPOCHAR coma ICHAR parentesisc puntocoma
    (16) LLAMADAMETODO -> . id parentesisa parentesisc puntocoma
    (17) METODO -> . func id parentesisa parentesisc llavesa INSTRUCCIONES return puntocoma llavesc
    (18) METODO -> . func main parentesisa parentesisc llavesa INSTRUCCIONES llavesc
    (24) LADO -> . OPERACION
    (25) LADO -> . GETSTACK
    (26) LADO -> . GETHEAP
    (27) LADO -> . DER
    (28) OPERACION -> . DER OP DER
    (32) GETSTACK -> . stack corchetea int parentesisa DER parentesisc corchetec
    (33) GETHEAP -> . heap corchetea int parentesisa DER parentesisc corchetec
    (29) DER -> . IZQ
    (30) DER -> . h
    (31) DER -> . p
    (34) IZQ -> . int
    (35) IZQ -> . temporal
    (36) IZQ -> . flotante
    (37) IZQ -> . NEG
    (51) NEG -> . menos int
    (52) NEG -> . menos flotante

    salto           shift and go to state 11
    goto            shift and go to state 12
    if              shift and go to state 13
    fmt             shift and go to state 16
    id              shift and go to state 17
    func            shift and go to state 18
    stack           shift and go to state 23
    heap            shift and go to state 25
    h               shift and go to state 26
    p               shift and go to state 27
    int             shift and go to state 24
    temporal        shift and go to state 28
    flotante        shift and go to state 29
    menos           shift and go to state 31

    INICIO                         shift and go to state 1
    INSTRUCCIONES                  shift and go to state 2
    INSTRUCCION                    shift and go to state 3
    INICIOSALTO                    shift and go to state 4
    INICIOGOTO                     shift and go to state 5
    CREARIF                        shift and go to state 6
    ASIGNACION                     shift and go to state 7
    IMPRESION                      shift and go to state 8
    LLAMADAMETODO                  shift and go to state 9
    METODO                         shift and go to state 10
    IZQ                            shift and go to state 14
    LADO                           shift and go to state 15
    OPERACION                      shift and go to state 19
    GETSTACK                       shift and go to state 20
    GETHEAP                        shift and go to state 21
    DER                            shift and go to state 22
    NEG                            shift and go to state 30

state 1

    (0) S' -> INICIO .



state 2

    (1) INICIO -> INSTRUCCIONES .
    (2) INSTRUCCIONES -> INSTRUCCIONES . INSTRUCCION
    (4) INSTRUCCION -> . INICIOSALTO
    (5) INSTRUCCION -> . INICIOGOTO
    (6) INSTRUCCION -> . CREARIF
    (7) INSTRUCCION -> . ASIGNACION
    (8) INSTRUCCION -> . IMPRESION
    (9) INSTRUCCION -> . LLAMADAMETODO
    (10) INSTRUCCION -> . METODO
    (11) INICIOSALTO -> . salto dospuntos
    (12) INICIOGOTO -> . goto salto puntocoma
    (13) CREARIF -> . if parentesisa IZQ SIMBOLO IZQ parentesisc llavesa goto salto llavesc
    (14) ASIGNACION -> . LADO igual LADO puntocoma
    (15) IMPRESION -> . fmt punto printf parentesisa TIPOCHAR coma ICHAR parentesisc puntocoma
    (16) LLAMADAMETODO -> . id parentesisa parentesisc puntocoma
    (17) METODO -> . func id parentesisa parentesisc llavesa INSTRUCCIONES return puntocoma llavesc
    (18) METODO -> . func main parentesisa parentesisc llavesa INSTRUCCIONES llavesc
    (24) LADO -> . OPERACION
    (25) LADO -> . GETSTACK
    (26) LADO -> . GETHEAP
    (27) LADO -> . DER
    (28) OPERACION -> . DER OP DER
    (32) GETSTACK -> . stack corchetea int parentesisa DER parentesisc corchetec
    (33) GETHEAP -> . heap corchetea int parentesisa DER parentesisc corchetec
    (29) DER -> . IZQ
    (30) DER -> . h
    (31) DER -> . p
    (34) IZQ -> . int
    (35) IZQ -> . temporal
    (36) IZQ -> . flotante
    (37) IZQ -> . NEG
    (51) NEG -> . menos int
    (52) NEG -> . menos flotante

    $end            reduce using rule 1 (INICIO -> INSTRUCCIONES .)
    salto           shift and go to state 11
    goto            shift and go to state 12
    if              shift and go to state 13
    fmt             shift and go to state 16
    id              shift and go to state 17
    func            shift and go to state 18
    stack           shift and go to state 23
    heap            shift and go to state 25
    h               shift and go to state 26
    p               shift and go to state 27
    int             shift and go to state 24
    temporal        shift and go to state 28
    flotante        shift and go to state 29
    menos           shift and go to state 31

    INSTRUCCION                    shift and go to state 32
    INICIOSALTO                    shift and go to state 4
    INICIOGOTO                     shift and go to state 5
    CREARIF                        shift and go to state 6
    ASIGNACION                     shift and go to state 7
    IMPRESION                      shift and go to state 8
    LLAMADAMETODO                  shift and go to state 9
    METODO                         shift and go to state 10
    IZQ                            shift and go to state 14
    LADO                           shift and go to state 15
    OPERACION                      shift and go to state 19
    GETSTACK                       shift and go to state 20
    GETHEAP                        shift and go to state 21
    DER                            shift and go to state 22
    NEG                            shift and go to state 30

state 3

    (3) INSTRUCCIONES -> INSTRUCCION .

    salto           reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    goto            reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    if              reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    fmt             reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    id              reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    func            reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    stack           reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    heap            reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    h               reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    p               reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    int             reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    temporal        reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    flotante        reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    menos           reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    $end            reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    return          reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)
    llavesc         reduce using rule 3 (INSTRUCCIONES -> INSTRUCCION .)


state 4

    (4) INSTRUCCION -> INICIOSALTO .

    salto           reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    goto            reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    if              reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    fmt             reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    id              reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    func            reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    stack           reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    heap            reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    h               reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    p               reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    int             reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    temporal        reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    flotante        reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    menos           reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    $end            reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    return          reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)
    llavesc         reduce using rule 4 (INSTRUCCION -> INICIOSALTO .)


state 5

    (5) INSTRUCCION -> INICIOGOTO .

    salto           reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    goto            reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    if              reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    fmt             reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    id              reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    func            reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    stack           reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    heap            reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    h               reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    p               reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    int             reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    temporal        reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    flotante        reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    menos           reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    $end            reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    return          reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)
    llavesc         reduce using rule 5 (INSTRUCCION -> INICIOGOTO .)


state 6

    (6) INSTRUCCION -> CREARIF .

    salto           reduce using rule 6 (INSTRUCCION -> CREARIF .)
    goto            reduce using rule 6 (INSTRUCCION -> CREARIF .)
    if              reduce using rule 6 (INSTRUCCION -> CREARIF .)
    fmt             reduce using rule 6 (INSTRUCCION -> CREARIF .)
    id              reduce using rule 6 (INSTRUCCION -> CREARIF .)
    func            reduce using rule 6 (INSTRUCCION -> CREARIF .)
    stack           reduce using rule 6 (INSTRUCCION -> CREARIF .)
    heap            reduce using rule 6 (INSTRUCCION -> CREARIF .)
    h               reduce using rule 6 (INSTRUCCION -> CREARIF .)
    p               reduce using rule 6 (INSTRUCCION -> CREARIF .)
    int             reduce using rule 6 (INSTRUCCION -> CREARIF .)
    temporal        reduce using rule 6 (INSTRUCCION -> CREARIF .)
    flotante        reduce using rule 6 (INSTRUCCION -> CREARIF .)
    menos           reduce using rule 6 (INSTRUCCION -> CREARIF .)
    $end            reduce using rule 6 (INSTRUCCION -> CREARIF .)
    return          reduce using rule 6 (INSTRUCCION -> CREARIF .)
    llavesc         reduce using rule 6 (INSTRUCCION -> CREARIF .)


state 7

    (7) INSTRUCCION -> ASIGNACION .

    salto           reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    goto            reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    if              reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    fmt             reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    id              reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    func            reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    stack           reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    heap            reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    h               reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    p               reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    int             reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    temporal        reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    flotante        reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    menos           reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    $end            reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    return          reduce using rule 7 (INSTRUCCION -> ASIGNACION .)
    llavesc         reduce using rule 7 (INSTRUCCION -> ASIGNACION .)


state 8

    (8) INSTRUCCION -> IMPRESION .

    salto           reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    goto            reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    if              reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    fmt             reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    id              reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    func            reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    stack           reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    heap            reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    h               reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    p               reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    int             reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    temporal        reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    flotante        reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    menos           reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    $end            reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    return          reduce using rule 8 (INSTRUCCION -> IMPRESION .)
    llavesc         reduce using rule 8 (INSTRUCCION -> IMPRESION .)


state 9

    (9) INSTRUCCION -> LLAMADAMETODO .

    salto           reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    goto            reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    if              reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    fmt             reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    id              reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    func            reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    stack           reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    heap            reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    h               reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    p               reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    int             reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    temporal        reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    flotante        reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    menos           reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    $end            reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    return          reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)
    llavesc         reduce using rule 9 (INSTRUCCION -> LLAMADAMETODO .)


state 10

    (10) INSTRUCCION -> METODO .

    salto           reduce using rule 10 (INSTRUCCION -> METODO .)
    goto            reduce using rule 10 (INSTRUCCION -> METODO .)
    if              reduce using rule 10 (INSTRUCCION -> METODO .)
    fmt             reduce using rule 10 (INSTRUCCION -> METODO .)
    id              reduce using rule 10 (INSTRUCCION -> METODO .)
    func            reduce using rule 10 (INSTRUCCION -> METODO .)
    stack           reduce using rule 10 (INSTRUCCION -> METODO .)
    heap            reduce using rule 10 (INSTRUCCION -> METODO .)
    h               reduce using rule 10 (INSTRUCCION -> METODO .)
    p               reduce using rule 10 (INSTRUCCION -> METODO .)
    int             reduce using rule 10 (INSTRUCCION -> METODO .)
    temporal        reduce using rule 10 (INSTRUCCION -> METODO .)
    flotante        reduce using rule 10 (INSTRUCCION -> METODO .)
    menos           reduce using rule 10 (INSTRUCCION -> METODO .)
    $end            reduce using rule 10 (INSTRUCCION -> METODO .)
    return          reduce using rule 10 (INSTRUCCION -> METODO .)
    llavesc         reduce using rule 10 (INSTRUCCION -> METODO .)


state 11

    (11) INICIOSALTO -> salto . dospuntos

    dospuntos       shift and go to state 33


state 12

    (12) INICIOGOTO -> goto . salto puntocoma

    salto           shift and go to state 34


state 13

    (13) CREARIF -> if . parentesisa IZQ SIMBOLO IZQ parentesisc llavesa goto salto llavesc

    parentesisa     shift and go to state 35


state 14

    (29) DER -> IZQ .

    mas             reduce using rule 29 (DER -> IZQ .)
    menos           reduce using rule 29 (DER -> IZQ .)
    asterisco       reduce using rule 29 (DER -> IZQ .)
    dividido        reduce using rule 29 (DER -> IZQ .)
    modulo          reduce using rule 29 (DER -> IZQ .)
    igual           reduce using rule 29 (DER -> IZQ .)
    puntocoma       reduce using rule 29 (DER -> IZQ .)
    parentesisc     reduce using rule 29 (DER -> IZQ .)


state 15

    (14) ASIGNACION -> LADO . igual LADO puntocoma

    igual           shift and go to state 36


state 16

    (15) IMPRESION -> fmt . punto printf parentesisa TIPOCHAR coma ICHAR parentesisc puntocoma

    punto           shift and go to state 37


state 17

    (16) LLAMADAMETODO -> id . parentesisa parentesisc puntocoma

    parentesisa     shift and go to state 38


state 18

    (17) METODO -> func . id parentesisa parentesisc llavesa INSTRUCCIONES return puntocoma llavesc
    (18) METODO -> func . main parentesisa parentesisc llavesa INSTRUCCIONES llavesc

    id              shift and go to state 39
    main            shift and go to state 40


state 19

    (24) LADO -> OPERACION .

    igual           reduce using rule 24 (LADO -> OPERACION .)
    puntocoma       reduce using rule 24 (LADO -> OPERACION .)


state 20

    (25) LADO -> GETSTACK .

    igual           reduce using rule 25 (LADO -> GETSTACK .)
    puntocoma       reduce using rule 25 (LADO -> GETSTACK .)


state 21

    (26) LADO -> GETHEAP .

    igual           reduce using rule 26 (LADO -> GETHEAP .)
    puntocoma       reduce using rule 26 (LADO -> GETHEAP .)


state 22

    (27) LADO -> DER .
    (28) OPERACION -> DER . OP DER
    (46) OP -> . mas
    (47) OP -> . menos
    (48) OP -> . asterisco
    (49) OP -> . dividido
    (50) OP -> . modulo

    igual           reduce using rule 27 (LADO -> DER .)
    puntocoma       reduce using rule 27 (LADO -> DER .)
    mas             shift and go to state 42
    menos           shift and go to state 43
    asterisco       shift and go to state 44
    dividido        shift and go to state 45
    modulo          shift and go to state 46

    OP                             shift and go to state 41

state 23

    (32) GETSTACK -> stack . corchetea int parentesisa DER parentesisc corchetec

    corchetea       shift and go to state 47


state 24

    (34) IZQ -> int .

    mas             reduce using rule 34 (IZQ -> int .)
    menos           reduce using rule 34 (IZQ -> int .)
    asterisco       reduce using rule 34 (IZQ -> int .)
    dividido        reduce using rule 34 (IZQ -> int .)
    modulo          reduce using rule 34 (IZQ -> int .)
    igual           reduce using rule 34 (IZQ -> int .)
    mayorque        reduce using rule 34 (IZQ -> int .)
    menorque        reduce using rule 34 (IZQ -> int .)
    mayoriwal       reduce using rule 34 (IZQ -> int .)
    menoriwal       reduce using rule 34 (IZQ -> int .)
    iwaliwal        reduce using rule 34 (IZQ -> int .)
    distintoque     reduce using rule 34 (IZQ -> int .)
    and             reduce using rule 34 (IZQ -> int .)
    or              reduce using rule 34 (IZQ -> int .)
    puntocoma       reduce using rule 34 (IZQ -> int .)
    parentesisc     reduce using rule 34 (IZQ -> int .)


state 25

    (33) GETHEAP -> heap . corchetea int parentesisa DER parentesisc corchetec

    corchetea       shift and go to state 48


state 26

    (30) DER -> h .

    mas             reduce using rule 30 (DER -> h .)
    menos           reduce using rule 30 (DER -> h .)
    asterisco       reduce using rule 30 (DER -> h .)
    dividido        reduce using rule 30 (DER -> h .)
    modulo          reduce using rule 30 (DER -> h .)
    igual           reduce using rule 30 (DER -> h .)
    puntocoma       reduce using rule 30 (DER -> h .)
    parentesisc     reduce using rule 30 (DER -> h .)


state 27

    (31) DER -> p .

    mas             reduce using rule 31 (DER -> p .)
    menos           reduce using rule 31 (DER -> p .)
    asterisco       reduce using rule 31 (DER -> p .)
    dividido        reduce using rule 31 (DER -> p .)
    modulo          reduce using rule 31 (DER -> p .)
    igual           reduce using rule 31 (DER -> p .)
    puntocoma       reduce using rule 31 (DER -> p .)
    parentesisc     reduce using rule 31 (DER -> p .)


state 28

    (35) IZQ -> temporal .

    mas             reduce using rule 35 (IZQ -> temporal .)
    menos           reduce using rule 35 (IZQ -> temporal .)
    asterisco       reduce using rule 35 (IZQ -> temporal .)
    dividido        reduce using rule 35 (IZQ -> temporal .)
    modulo          reduce using rule 35 (IZQ -> temporal .)
    igual           reduce using rule 35 (IZQ -> temporal .)
    mayorque        reduce using rule 35 (IZQ -> temporal .)
    menorque        reduce using rule 35 (IZQ -> temporal .)
    mayoriwal       reduce using rule 35 (IZQ -> temporal .)
    menoriwal       reduce using rule 35 (IZQ -> temporal .)
    iwaliwal        reduce using rule 35 (IZQ -> temporal .)
    distintoque     reduce using rule 35 (IZQ -> temporal .)
    and             reduce using rule 35 (IZQ -> temporal .)
    or              reduce using rule 35 (IZQ -> temporal .)
    puntocoma       reduce using rule 35 (IZQ -> temporal .)
    parentesisc     reduce using rule 35 (IZQ -> temporal .)


state 29

    (36) IZQ -> flotante .
